[gd_scene load_steps=4 format=2]

[ext_resource path="res://NoPhysics2D/Stick.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 49, 4 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 49, 4 )

[node name="Stick" type="Area2D" groups=[
"stick",
]]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color( 0.270588, 0.231373, 0.184314, 0.670588 )
polygon = PoolVector2Array( -50, -5, 50, -5, 50, 5, -50, 5 )

[node name="RigidBody2D" type="RigidBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
shape = SubResource( 2 )
disabled = true
[connection signal="area_entered" from="." to="." method="_on_Stick_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Stick_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_Stick_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Stick_body_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Stick_mouse_exited"]
